--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Movies</title>
-    <link rel="icon" href="./src/assets/android-chrome-192x192.png" />
+    <title>MovieTrackr</title>
+    <link rel="icon" href="./src/assets/c7945b4d128ef5091911bfc9fc3fec84.svg" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/App/main.tsx"></script>
   </body>
 </html>
