refactor(images): improve image handling in skeleton, correct website name, and resolve empty submit form issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MovieTrackr</title>
+    <title>WatchWhiz</title>
     <link rel="icon" href="./src/assets/c7945b4d128ef5091911bfc9fc3fec84.svg" />
   </head>
   <body>
